[gd_scene load_steps=2 format=3 uid="uid://c8yh3k5m9x2w4"]

[ext_resource type="Script" path="res://ui/menus/main_menu.gd" id="1_script"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "KASVU"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="CenterContainer/MainPanel"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "START GAME"

[node name="HostButton" type="Button" parent="CenterContainer/MainPanel"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "HOST MULTIPLAYER"

[node name="JoinButton" type="Button" parent="CenterContainer/MainPanel"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "JOIN MULTIPLAYER"

[node name="LoadButton" type="Button" parent="CenterContainer/MainPanel"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "LOAD GAME"

[node name="PlaygroundButton" type="Button" parent="CenterContainer/MainPanel"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "PLAYGROUND"

[node name="QuitButton" type="Button" parent="CenterContainer/MainPanel"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "QUIT"

[node name="HostPanel" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 20

[node name="HostLabel" type="Label" parent="CenterContainer/HostPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "HOST GAME"
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="CenterContainer/HostPanel"]
layout_mode = 2
text = "Players will connect to your IP address"
horizontal_alignment = 1

[node name="CreateHostButton" type="Button" parent="CenterContainer/HostPanel"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "CREATE HOST"

[node name="BackButton" type="Button" parent="CenterContainer/HostPanel"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
text = "BACK"

[node name="JoinPanel" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 15

[node name="JoinLabel" type="Label" parent="CenterContainer/JoinPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "JOIN GAME"
horizontal_alignment = 1

[node name="AddressLabel" type="Label" parent="CenterContainer/JoinPanel"]
layout_mode = 2
text = "Host Address:"

[node name="AddressInput" type="LineEdit" parent="CenterContainer/JoinPanel"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
placeholder_text = "127.0.0.1"
text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="CenterContainer/JoinPanel"]
layout_mode = 2
text = "Port:"

[node name="PortInput" type="LineEdit" parent="CenterContainer/JoinPanel"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
placeholder_text = "7777"
text = "7777"

[node name="ConnectButton" type="Button" parent="CenterContainer/JoinPanel"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "CONNECT"

[node name="BackButton" type="Button" parent="CenterContainer/JoinPanel"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
text = "BACK"

[node name="LoadPanel" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 15

[node name="LoadLabel" type="Label" parent="CenterContainer/LoadPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "LOAD GAME"
horizontal_alignment = 1

[node name="SaveSlots" type="VBoxContainer" parent="CenterContainer/LoadPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Slot1" type="Button" parent="CenterContainer/LoadPanel/SaveSlots"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "Save Slot 1 - Empty"

[node name="Slot2" type="Button" parent="CenterContainer/LoadPanel/SaveSlots"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "Save Slot 2 - Empty"

[node name="Slot3" type="Button" parent="CenterContainer/LoadPanel/SaveSlots"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "Save Slot 3 - Empty"

[node name="BackButton" type="Button" parent="CenterContainer/LoadPanel"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
text = "BACK"

[connection signal="pressed" from="CenterContainer/MainPanel/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/MainPanel/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CenterContainer/MainPanel/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="CenterContainer/MainPanel/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="CenterContainer/MainPanel/PlaygroundButton" to="." method="_on_playground_button_pressed"]
[connection signal="pressed" from="CenterContainer/MainPanel/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CenterContainer/HostPanel/CreateHostButton" to="." method="_on_create_host_button_pressed"]
[connection signal="pressed" from="CenterContainer/HostPanel/BackButton" to="." method="_on_host_back_button_pressed"]
[connection signal="pressed" from="CenterContainer/JoinPanel/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="CenterContainer/JoinPanel/BackButton" to="." method="_on_join_back_button_pressed"]
[connection signal="pressed" from="CenterContainer/LoadPanel/SaveSlots/Slot1" to="." method="_on_save_slot_pressed" binds=[1]]
[connection signal="pressed" from="CenterContainer/LoadPanel/SaveSlots/Slot2" to="." method="_on_save_slot_pressed" binds=[2]]
[connection signal="pressed" from="CenterContainer/LoadPanel/SaveSlots/Slot3" to="." method="_on_save_slot_pressed" binds=[3]]
[connection signal="pressed" from="CenterContainer/LoadPanel/BackButton" to="." method="_on_load_back_button_pressed"]

